tests/suite/snapshots/suite__parse__tests__parse__bad_use_statement_loc.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_use_statement_loc.xi:4:1]
   │
 4 │ use io
   · ─┬─  
   ·  ╰─── Unexpected token
───╯

